--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:ds": "npm run typeorm -- -d src/database/data-source.ts",
+    "migration:show": "npm run typeorm:ds migration:show",
+    "migration:generate": "npm run typeorm:ds migration:generate src/database/migrations/UpdateDatabase",
+    "migration:run": "npm run typeorm:ds migration:run",
+    "migration:revert": "npm run typeorm:ds migration:revert",
+    "migration:create": "npm run typeorm migration:create src/database/migrations/NewMigration"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
